--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ migrate_working_dir/
 .packages
 build/
 /example/lib/playground/playground.dart
+.flutter-plugins
+.flutter-plugins-dependencies
+
