--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   shared_preferences: ^2.0.15
 
 dev_dependencies:
+  test: ^1.14.4
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
